syntax = "proto3";

option java_package = "ai.grakn.rpc.proto";
option java_outer_classname = "AnswerProto";

import "Concept.proto";

package session;

message Answer {
    oneof answer {
        AnswerGroup answerGroup = 1;
        ConceptMap conceptMap = 2;
        ConceptList conceptList = 3;
        ConceptSet conceptSet = 4;
        ConceptSetMeasure conceptSetMeasure = 5;
        Value value = 6;
    }
}

message Explanation {
    string pattern = 1;
    repeated ConceptMap answers = 2;
}

message AnswerGroup {
    Concept owner = 1;
    repeated Answer answers = 2;
    Explanation explanation = 3;
}

message ConceptMap {
    map<string, Concept> map = 1;
    Explanation explanation = 2;
}

message ConceptList {
    ConceptIds list = 1;
    Explanation explanation = 2;
}

message ConceptSet {
    ConceptIds set = 1;
    Explanation explanation = 2;
}

message ConceptSetMeasure {
    ConceptIds set = 1;
    Number measurement = 2;
    Explanation explanation = 3;
}

message Value {
    Number number = 1;
    Explanation explanation = 2;
}

message ConceptIds {
    repeated string ids = 1;
}

message Number {
    string value = 1;
    // We use a string to contain the full representation of a number
}